# ractiviti-web

./: .env  .gitignore  Cargo.toml  config.yaml  docker-compose.yml  gulpfile.js  log4rs_config.yaml  package-lock.json  package.bak.json  package.json  tsconfig.json  webpack.config.js
examples/: local_datetime.rs  rust_md5.rs
migrations/: 20220915121117_create_table.sql  20220925113611_create_table.sql
src/: main.rs
src/api/: bpmn.rs  deployment.rs  login.rs  mod.rs  password.rs  prodef.rs
src/common/: api_error.rs  common_handles.rs  dto.rs  error.rs  handles.rs  html_template.rs  mod.rs  template.rs  utils.rs  web_error.rs
src/dao/: apf_sys_user_dao.rs  mod.rs
src/handles/: auth_layer.rs  bpmn.rs  common_handles.rs  handler_error_layer.rs  hello_layer.rs  hello_service.rs  home.rs  mod.rs  root.rs  session.rs  session_facade.rs  session_facade_layer.rs  sign_in.rs
src/model/: apf_sys_user.rs  mod.rs
src/route/: api_route.rs  client_route.rs  mod.rs  page_route.rs
src/service/: mod.rs  sys_user_service.rs
tests_data/: blog.html
web/assets/: not_found.html  server_error.html
web/common/component/: confirm_dialog.tsx  data_field.tsx  data_grid.tsx  date_field.tsx  notifaction.tsx  query_bar.tsx  query_dialog.tsx  select_field.tsx
web/common/model/: error.ts  form_input_result.ts  pagination.ts  query.ts
web/common/service/:  http-common.ts  http-common.ts
web/common/template/: index.html
web/common/util/: datetime.ts  type_schema.ts
web/modules/bpmn/: index.html
web/modules/change_password/: index.tsx
web/modules/dashboard/: index.tsx
(+64 files in other folders)
