[package]
name = "ractiviti-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-extra = "0.3.7"
async-trait = "0.1"
rust-crypto = "0.2"
rand = "0.8"
ractiviti-core = { path = "../ractiviti-core"}
axum = "0.5"
axum-sessions = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
ramhorns = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14"
pin-project-lite = "0.2"
log = "0.4"
log4rs = "1.1"
log4rs-macros = "1.1"
once_cell = "1.13"
eyre = "0.6"
color-eyre = "0.5"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
chrono = { version = "0.4.21", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
futures = { version = "0.3", features = ["compat"] }
deadpool-postgres = "0.10"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

